--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,46 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.search-bar-container {
   display: flex;
   flex-direction: column;
-  align-items: center;
+align-items: center;
+}
+.page-title {
+text-align: center;
+}
+.search-bar-label {
+  font-size: 1.4rem;
+  margin-bottom: 1rem;
+}
+
+.search-bar-input {
+  font-size: 1.6rem;
+  margin-bottom: 1rem;
+
+}
+
+.search-bar-checkbox-container{
+  font-size: 1.4rem;
+}
+
+.products-page{
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  display: flex;
+  flex-direction: column;
 }
 
-.App-link {
-  color: #61dafb;
-}
+.products-table{
+  border-color: black;
+  border-style: solid;
+border-width: 1px;
+margin-top: 2rem;
+text-align: center;
+font-size: 1.3rem;
+margin: 2rem;
+padding: 1rem;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+}
+.products-table-row {
+
+}
+.products-table-name > th {
+  background-color: lightgrey;
 }
